dgkanatsios/d15.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: d15
  name: d15
spec:
  volumes:
  - name: d14sec
    secret:
      secretName: d14sec
  containers:
  - image: nginx
    name: d15
    resources: {}
    volumeMounts:
    - name: d14sec
      mountPath: /etc/foo
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
