dgkanatsios/d7.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: d7
  name: d7
spec:
  containers:
  - image: nginx
    name: d7
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
