dgkanatsios/d8.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: d8
  name: d8
spec:
  containers:
  - image: nginx
    name: d8
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
