dgkanatsios/e4.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: e4log
  name: e4log
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - 'i=0; while true; do echo "$i: $(date)"; i=$((i+1)); sleep 1; done'
    image: busybox
    name: e4log
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
