dgkanatsios/g1.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: g1
  name: g1
spec:
  volumes:
  - name: g1vol
    emptyDir: {}
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep 3600
    image: busybox
    name: g1a
    volumeMounts:
    - name: g1vol
      mountPath: /etc/foo
    resources: {}
  - args:
    - /bin/sh
    - -c
    - sleep 3600
    image: busybox
    name: g1b
    volumeMounts:
    - name: g1vol
      mountPath: /etc/foo

  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
