dgkanatsios/f4netpol.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: netpol
spec:
  podSelector:
    matchLabels:
      access: granted
